# LearnWGPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  run-web.sh  run.sh
include/: app.hpp  camera.hpp  cube.hpp
scripts/: build-web.sh  build.sh
src/: app.cpp  camera.cpp  main.cpp
src/shaders/: shader.wgsl
